# HongLang_Plasma_Algorithm

./: 004.LS  B001.LS  B001003.LS  B002.LS  B002003.LS  B003.LS  B0211.LS  BOTTOM.LS  BOTTOM001.LS  BOTTOM01.LS  CMakeLists.txt  LOWWALL.LS  NORMAL.LS  P004.LS  PNS0001.LS  PNS001.LS  SN1078C.stl  TEST.LS  TESTB001.LS  TESTW001.LS  W001.LS  W002.LS  W003.LS  W0211.LS  W10.LS  WALL.LS  WALL001.LS  WALL01.LS  irregularSurfaceType.py  irregularSurfaceType_ef2.py  main.cpp  path_planning.py  plasma.py  plasma_ef2.py  point_2_ls.py  result_down.ply  tmpp.py  uidesign.py
input/: 004_rand.xyz
model/: 002.ipt  002.stl  003.ipt  003.stl  P004.LS  鍍鋁烤盤.stl
model/cad/: 001.ipt  004.ipt  endeffector_30mm.ipt  shelltest.ipt  test.ipt  鍍鋁烤盤.ipt
model/stl/: 001_surface.stl  002_surface.stl  003_surface.stl  004.stl  004_surface.stl  endeffector_30mm.stl  shelltest.stl  test.stl
output/: S001.LS  S004.LS  Shell001.LS  ShellTest.LS
